Deigned test-questions-selection page. Fixed Sonarqube issues.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -1,7 +1,7 @@
 ﻿<div class="dialog">
   <div class="dialog-title clearfix">
     <h1 class="pull-left" md-dialog-title>Create New Section</h1>
-    <button type="button" class="pull-right" md-dialog-close><i class="material-icons">close</i></button>
+    <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
   </div>
   <md-dialog-content>
     <div class="form-group">
