--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -4,9 +4,9 @@
       <h1 class="pull-left">
         <span [hidden]="editName">{{testsettings.testName}}</span>
         <input type="text" class="form-control" [(ngModel)]="testsettings.testName" name="Test Name" [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="onBlurMethod(testsettings.id,testsettings)" />
-        <i class="material-icons" (click)="editName = !editName">edit</i>
+        <em class="material-icons" (click)="editName = !editName">edit</em>
       </h1>
-      <button type="button" class="btn btn-primary pull-right"><i class="material-icons">remove_red_eye</i> Preview</button>
+      <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
     </div>
   </div>
   <div class="container">
@@ -90,14 +90,14 @@
   <div class="footer-block clearfix">
     <div class="container">
       <ul class="steps pull-left">
-        <li class="h5">Select Sections</li>
-        <li class="h5"><i class="material-icons">keyboard_arrow_right</i></li>
-        <li class="h5">Select Questions</li>
-        <li class="h5"><i class="material-icons">keyboard_arrow_right</i></li>
-        <li class="h5 active">Settings & Schedule</li>
+        <li class="h5"><a [routerLink]="['/tests/sections']">Select Sections</a></li>
+        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
+        <li class="h5"><a [routerLink]="['/tests/questions']">Select Questions</a></li>
+        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
+        <li class="h5 active"><a [routerLink]="['/tests/settings']">Settings & Schedule</a></li>
       </ul>
       <div class="buttons-block pull-right">
-        <button type="button" class="btn">Save & Exit</button>
+        <button type="button" class="btn" [routerLink]="['/tests']">Save & Exit</button>
         <button type="button" class="btn btn-primary" (click)="launchTestDialog(testsettings.id,testsettings)">Save & Share</button>
       </div>
     </div>
