--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -33,8 +33,8 @@
         <div class="form-group">
           <label class="h4">Code Languages</label>
           <md-chip-list class="form-control half-width" (click)="autocomplete.focus()">
-            <md-chip>Objective C <i class="material-icons">close</i></md-chip>
-            <md-chip>C++ <i class="material-icons">close</i></md-chip>
+            <md-chip>Objective C <em class="material-icons">close</em></md-chip>
+            <md-chip>C++ <em class="material-icons">close</em></md-chip>
             <md-input-container>
               <input mdInput placeholder="Code Languages" [mdAutocomplete]="code" #autocomplete>
             </md-input-container>
@@ -61,111 +61,113 @@
           <label class="h4">Test Case(s)</label>
           <br />
           <button type="button" class="btn btn-primary" [hidden]="showTestCase" (click)="showTestCase=true">Add Test Case</button>
-          <div class="test-case-block" [hidden]="!showTestCase">
-            <div class="tc-header clearfix">
-              <div class="title-info h2 pull-left">
-                <span>Type: Basic</span>
-                <span> | </span>
-                <span>Title: </span>
-                <span> | </span>
-                <span>Weightage: 0</span>
+          <md2-accordion>
+            <md2-accordion-tab class="collapsible-block" [hidden]="!showTestCase">
+              <md2-accordion-header class="collapsible-header clearfix">
+                <div class="title-info h2 pull-left">
+                  <span>Type: Basic</span>
+                  <span> | </span>
+                  <span>Title: </span>
+                  <span> | </span>
+                  <span>Weightage: 0</span>
+                </div>
+                <div class="pull-right">
+                  <span class="delete-option h7"><em class="material-icons">delete</em> <span>Delete</span></span>
+                  <span class="collapsible-icon"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
+                </div>
+              </md2-accordion-header>
+              <div class="collapsible-body">
+                <div class="form-group">
+                  <label>Test Case Title</label>
+                  <input type="text" class="form-control half-width" />
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Description</label>
+                  <textarea class="form-control half-width" rows="3"></textarea>
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Type</label>
+                  <select class="form-control half-width">
+                    <option>Select Option</option>
+                    <option>Option 1</option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                  </select>
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Marks</label>
+                  <input type="text" class="form-control half-width" placeholder="0" />
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Input Values</label>
+                  <textarea class="form-control half-width" rows="3"></textarea>
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Expected Values</label>
+                  <textarea class="form-control half-width" rows="3"></textarea>
+                  <div class="errors-container"></div>
+                </div>
               </div>
-              <div class="pull-right">
-                <span class="delete-option h7"><i class="material-icons">delete</i> <span class="h7">Delete</span></span>
-                <span class="collapsible-icon" (click)="collapseTestCase=!collapseTestCase"><i class="material-icons">remove</i></span>
+            </md2-accordion-tab>
+            <md2-accordion-tab class="collapsible-block" [hidden]="!showNewTestCase">
+              <md2-accordion-header class="collapsible-header clearfix">
+                <div class="title-info h2 pull-left">
+                  <span>Type: Basic</span>
+                  <span> | </span>
+                  <span>Title: </span>
+                  <span> | </span>
+                  <span>Weightage: 0</span>
+                </div>
+                <div class="pull-right">
+                  <span class="delete-option h7"><em class="material-icons">delete</em> <span>Delete</span></span>
+                  <span class="collapsible-icon"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
+                </div>
+              </md2-accordion-header>
+              <div class="collapsible-body">
+                <div class="form-group">
+                  <label>Test Case Title</label>
+                  <input type="text" class="form-control half-width" />
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Description</label>
+                  <textarea class="form-control half-width" rows="3"></textarea>
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Type</label>
+                  <select class="form-control half-width">
+                    <option>Select Option</option>
+                    <option>Option 1</option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                  </select>
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Marks</label>
+                  <input type="text" class="form-control half-width" placeholder="0" />
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Input Values</label>
+                  <textarea class="form-control half-width" rows="3"></textarea>
+                  <div class="errors-container"></div>
+                </div>
+                <div class="form-group">
+                  <label>Test Case Expected Values</label>
+                  <textarea class="form-control half-width" rows="3"></textarea>
+                  <div class="errors-container"></div>
+                </div>
               </div>
-            </div>
-            <div class="tc-body" [hidden]="collapseTestCase">
-              <div class="form-group">
-                <label>Test Case Title</label>
-                <input type="text" class="form-control half-width" />
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Description</label>
-                <textarea class="form-control half-width" rows="3"></textarea>
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Type</label>
-                <select class="form-control half-width">
-                  <option>Select Option</option>
-                  <option>Option 1</option>
-                  <option>Option 2</option>
-                  <option>Option 3</option>
-                </select>
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Marks</label>
-                <input type="text" class="form-control half-width" placeholder="0" />
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Input Values</label>
-                <textarea class="form-control half-width" rows="3"></textarea>
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Expected Values</label>
-                <textarea class="form-control half-width" rows="3"></textarea>
-                <div class="errors-container"></div>
-              </div>
-            </div>
-          </div>
-          <div class="test-case-block" [hidden]="!showNewTestCase">
-            <div class="tc-header clearfix">
-              <div class="title-info h2 pull-left">
-                <span>Type: Basic</span>
-                <span> | </span>
-                <span>Title: </span>
-                <span> | </span>
-                <span>Weightage: 0</span>
-              </div>
-              <div class="pull-right">
-                <span class="delete-option h7"><i class="material-icons">delete</i> <span class="h7">Delete</span></span>
-                <span class="collapsible-icon" (click)="collapseNewTestCase=!collapseNewTestCase"><i class="material-icons">remove</i></span>
-              </div>
-            </div>
-            <div class="tc-body" [hidden]="collapseNewTestCase">
-              <div class="form-group">
-                <label>Test Case Title</label>
-                <input type="text" class="form-control half-width" />
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Description</label>
-                <textarea class="form-control half-width" rows="3"></textarea>
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Type</label>
-                <select class="form-control half-width">
-                  <option>Select Option</option>
-                  <option>Option 1</option>
-                  <option>Option 2</option>
-                  <option>Option 3</option>
-                </select>
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Marks</label>
-                <input type="text" class="form-control half-width" placeholder="0" />
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Input Values</label>
-                <textarea class="form-control half-width" rows="3"></textarea>
-                <div class="errors-container"></div>
-              </div>
-              <div class="form-group">
-                <label>Test Case Expected Values</label>
-                <textarea class="form-control half-width" rows="3"></textarea>
-                <div class="errors-container"></div>
-              </div>
-            </div>
-          </div>
-          <button type="button" class="add-testcase-btn h2" [hidden]="!showTestCase" (click)="showNewTestCase=!showNewTestCase">Add New Test Case</button>
+            </md2-accordion-tab>
+          </md2-accordion>
+          <button type="button" class="add-testcase-btn h2" [hidden]="!showTestCase" (click)="showNewTestCase=true">Add New Test Case</button>
         </div>
       </div>
       <div class="actions-area">
