--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/delete-test-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/delete-test-dialog.html
@@ -1,7 +1,7 @@
 ﻿<div class="dialog">
   <div class="dialog-title clearfix">
     <h1 class="pull-left" md-dialog-title>Delete Confirmation</h1>
-    <button type="button" class="pull-right" md-dialog-close><i class="material-icons">close</i></button>
+    <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
   </div>
   <md-dialog-content>
     <h4 class="mb20">Are you sure you want to delete this test?</h4>
