Corrected function Name in server side, removed unit testing , removed extra spaces and unused variable in client side

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -11,7 +11,6 @@
                 <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched)' [hidden]='!oldpassword.errors.required' class='error-msg'>Please enter your current password</span>
                 <span class='error-msg' [hidden]="!isRequired">{{requiredMessage}}</span>
             </div>
-
         </div>
         <div class="form-group">
             <label class="h4">New Password</label>
@@ -20,18 +19,16 @@
                 <span *ngIf='newpassword.errors && (newpassword.dirty || newpassword.touched)' [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
                 <span class='error-msg' [hidden]="!isRequired">{{requiredMessage}}</span>
             </div>
-
         </div>
         <div class="form-group">
             <label class="h4">Confirm Password</label>
             <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" #confirmpassword="ngModel" required />
             <div class="errors-container">
                 <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
-                <span class='error-msg' [hidden]="!isRequired">{{requiredMessage}}</span>
+                <span class='error-msg' [hidden]="!isRequired">{{messageMismatch}}</span>
                 <br /><br />
                 <span class='error-msg' [hidden]="!errorCorrection">{{errorMesseage}}</span>
             </div>
-
         </div>
     </md-dialog-content>
     <md-dialog-actions>
